--- a/pom.xml
+++ b/pom.xml
@@ -13,18 +13,25 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>20.0.2</version>
+            <version>21.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>20.0.2</version>
+            <version>21.0.1</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
@@ -39,12 +46,12 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
+                <version>0.0.8</version>
                 <executions>
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.g3.App</mainClass>
+                            <mainClass>g3.scms.database.Db</mainClass>
                         </configuration>
                     </execution>
                     <execution>
@@ -53,7 +60,7 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                             </options>
-                            <mainClass>com.g3.App</mainClass>
+                            <mainClass>g3.scms.controllers.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
@@ -69,7 +76,7 @@
                         <link>https://openjfx.io/javadoc/20/</link>
 
                         <link>https://docs.oracle.com/javase/8/javafx/api/toc.htm</link>
-
+                        
                         <link>https://javadoc.io/doc/org.openjfx/javafx-controls/latest/index.html</link>
 
 
@@ -78,6 +85,9 @@
 
                         <!-- MySQL Connector/J Javadoc -->
                         <link>https://javadoc.io/doc/com.mysql/mysql-connector-j/8.0.33/index.html</link>
+
+                        <!-- JUnit Javadoc -->
+                        <link>https://junit.org/junit5/docs/current/api/</link>
                     </links>
                 </configuration>
             </plugin>
