--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,7 +1,7 @@
-MYSQL_HOST= "127.0.0.1"
-MYSQL_USER="tam.dev"
-MYSQL_PASSWORD="tamirat.mySQL"
-MYSQL_DATABASE="notes_app"
+# MYSQL_HOST= "127.0.0.1"
+# MYSQL_USER="tam.dev"
+# MYSQL_PASSWORD="tamirat.mySQL"
+# MYSQL_DATABASE="notes_app"
 
 
 POSTGRES_USER='postgres'
@@ -11,3 +11,8 @@ POSTGRES_PASSWORD='tamiu.pgres'
 # AssemblyAI API
 API_AUTH_KEY=e69f3255c7fd4077b0d7ca1c2d117c63
 API_BASE_URL=https://api.assemblyai.com/
+
+# http request
+
+PORT=1492
+API_BASE_URL=http://localhost:1492/
